# freertos_mutex_disinherit_test

./: CMakeLists.txt  LICENSE  README.md
freertos_mutex_test/: CMakeLists.txt  freertos_mutex_test.c  freertos_mutex_test.h
